@@ -10,14 +10,14 @@
 An object of the class \ccc{MP_Float} is able to represent a floating point
 value with arbitrary precision.  This number type has the property that
 additions, subtractions and multiplications are computed exactly, as well as
-the construction from a double.  Division and square root are computed
-approximately, so we suggest that you use rationals using
-\ccc{Quotient<MP_Float>} when you need exact divisions.
+the construction from \ccc{float}, \ccc{double} and \ccc{long double}.
+Division and square root are computed approximately, so we suggest that you use
+rationals like \ccc{Quotient<MP_Float>} when you need exact divisions.
 
 Note on the implementation : although the mantissa length is basically only
 limited by the available memory, the exponent is currently represented by a
-\ccc{double}, which can overflow in some circumstances.  We plan to also have
-a multiprecision exponent to fix this issue.
+(integral valued) \ccc{double}, which can overflow in some circumstances.  We
+plan to also have a multiprecision exponent to fix this issue.
 
 \ccInclude{CGAL/MP_Float.h}
 
@@ -36,8 +36,14 @@ FieldNumberType
 \ccConstructor{MP_Float(int i)}
 {introduces the integral value i.}
 \ccGlue
+\ccConstructor{MP_Float(float d)}
+{introduces the floating point value d (exact conversion).}
+\ccGlue
 \ccConstructor{MP_Float(double d)}
-{introduces the floating point value d.}
+{introduces the floating point value d (exact conversion).}
+\ccGlue
+\ccConstructor{MP_Float(long double d)}
+{introduces the floating point value d (exact conversion).}
 
 \ccOperations
 
