@@ -42,6 +42,7 @@ compile_and_run()
     fi
     echo "Executing $1 ... "
     echo
+    ulimit -t 1200
     if eval $COMMAND > $OUTPUTFILE 2>&1 ; then
       echo "   succesful execution   of $1" >> $ERRORFILE
     else
@@ -70,14 +71,15 @@ if [ $# -ne 0 ] ; then
     compile_and_run $file
   done
 else
-  compile_and_run doubletst
-  compile_and_run floattst
   compile_and_run Gmpq
   compile_and_run MP_Float
-  compile_and_run quotient_io
-  compile_and_run simplest_rational
   compile_and_run _test_valid_finite_double
   compile_and_run _test_valid_finite_float
+  compile_and_run doubletst
+  compile_and_run floattst
+  compile_and_run long_doubletst
+  compile_and_run quotient_io
+  compile_and_run simplest_rational
   compile_and_run utilities
 fi
 
